--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "axios": "^0.17.1",
     "vue": "^2.3.3",
     "vue-router": "^2.3.1",
     "vuetify": "^0.17.4"
