Service Create Form has been added

--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "inventory",
-  "short_name": "inventory",
+  "name": "Intranet",
+  "short_name": "Intranet",
   "icons": [
     {
       "src": "img/icons/android-chrome-192x192.png",
@@ -16,5 +16,5 @@
   "start_url": "/index.html",
   "display": "standalone",
   "background_color": "#000000",
-  "theme_color": "#4DBA87"
+  "theme_color": "#b3d4fc"
 }
