--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "promise-polyfill": "^7.0.0",
     "vue": "^2.3.3",
     "vue-router": "^2.3.1",
     "vuetify": "^0.17.4",
