--- a/static/manifest.json
+++ b/static/manifest.json
@@ -14,7 +14,7 @@
     }
   ],
   "start_url": "/index.html",
-  "display": "standalone",
+  "display": "fullscreen",
   "background_color": "#000000",
   "theme_color": "#b3d4fc"
 }
