--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "e2e": "node test/e2e/runner.js",
     "test": "npm run unit && npm run e2e",
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs",
-    "fix": "eslint --fix --ext .js,.vue src test/unit/specs test/e2e/specs"
+    "fix": "eslint --fix --ext .js,.vue src test/unit/specs test/e2e/specs",
+    "cypress:open": "cypress open"
   },
   "dependencies": {
     "axios": "^0.17.1",
@@ -42,6 +43,7 @@
     "cross-spawn": "^5.0.1",
     "css-loader": "^0.28.10",
     "cssnano": "^3.10.0",
+    "cypress": "^2.1.0",
     "eslint": "^3.19.0",
     "eslint-config-standard": "^6.2.1",
     "eslint-friendly-formatter": "^3.0.0",
@@ -92,7 +94,8 @@
     "webpack-bundle-analyzer": "^2.11.1",
     "webpack-dev-middleware": "^1.10.0",
     "webpack-hot-middleware": "^2.21.2",
-    "webpack-merge": "^4.1.2"
+    "webpack-merge": "^4.1.2",
+    "xvfb": "^0.2.3"
   },
   "engines": {
     "node": ">= 4.0.0",
